@@ -1,3 +1,14 @@
+Next Release
+============
+
+Implementation Changes
+----------------------
+
+- There is an indirection in ``repoze.bfg.url.model_url`` now that
+  consults a utility to generate the base model url (without extra
+  elements or a query string).  Eventually this will service virtual
+  hosting; for now it's undocumented and should not be hooked.
+
 0.6.5 (2009-01-26)
 ==================
 
